--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
-<project name="Salesforce" default="deployall" basedir="."
-  xmlns:sf="deployall">
+<project name="Salesforce" default="test" basedir="."
+  xmlns:sf="antlib:com.salesforce">
 
   <property file="build.properties" />
 
@@ -8,7 +8,7 @@
   <!--   <! — Deploy the unpackaged set of metadata retrieved with retrieveUnpackaged and run tests in
   this organization’s namespace only →
  -->
-  <target name="deployall:deploy">
+  <target name="deployall">
 
     <sf:deploy username="${sf.username}" password="${sf.password}" serverurl="${sf.serverurl}"
       testlevel="NoTestRun" logtype="Detail" deployRoot="force-app" />
