--- a/build.properties
+++ b/build.properties
@@ -1,19 +1,13 @@
-# build.properties
-#
+DEV.username = {aminekammoun55@mindful-narwhal-rzua2o.com}
+DEV.password = {Amine22102439?}
 
-# Specify the login credentials for the desired Salesforce organization
-sf.username = aminekammoun55@mindful-narwhal-rzua2o.com
-sf.password = Amine22102439?
-#sf.sessionId = <Insert your Salesforce session id here.  Use this or username/password above.  Cannot use both>
-#sf.pkgName = <Insert comma separated package names to be retrieved>
-#sf.zipFile = <Insert path of the zipfile to be retrieved>
-#sf.metadataType = <Insert metadata type name for which listMetadata or bulkRetrieve operations are to be performed>
+PROD.username =  {aminekammoun55@mindful-narwhal-rzua2o.com}
+PROD.password =  {Amine22102439?}
 
-# Use 'https://login.salesforce.com' for production or developer edition (the default if not specified).
-# Use 'https://test.salesforce.com for sandbox.
-sf.serverurl = https://login.salesforce.com
+DEVP.serverurl = https://login.salesforce.com
+DEV.serverurl = https://login.salesforce.com
 
-sf.maxPoll = 20
-# If your network requires an HTTP proxy, see http://ant.apache.org/manual/proxy.html for configuration.
-#
+sfdcJarFile= ant-salesforce.jar
 
+DEV.maxPoll = 20
+DEV.maxPoll = 20
