--- a/build.xml
+++ b/build.xml
@@ -1,17 +1,86 @@
-<project name="Product-ffotprint" default="deployall" basedir="."
+<project name="Sample usage of Salesforce Ant tasks" basedir="." default="deployCodeCheckOnly"
   xmlns:sf="antlib:com.salesforce">
-  <property file="build.properties" />
 
+  <property file="build.properties" />
   <property environment="env" />
 
-  <!--   <! — Deploy the unpackaged set of metadata retrieved with retrieveUnpackaged and run tests in
-  this organization’s namespace only →
- -->
-  <target name="deployall">
 
-    <sf:deploy username="${sf.username}" password="${sf.password}" serverurl="${sf.serverurl}"
-      testlevel="NoTestRun" logtype="Detail" deployRoot="force-app" />
+  <!--For
+  Sandbox -->
 
+  <target name="retrieveCode">
+    <sf:retrieve username="${DEV.username}" password="${DEV.password}" serverurl="${DEV.serverurl}"
+      retrieveTarget="force-app" unpackaged="force-app/package.xml" />
+  </target>
+  <taskdef resource="com/salesforce/antlib.xml" uri="antlib:com.salesforce">
+    <classpath>
+      <pathelement location="./lib/ant-salesforce.jar" />
+    </classpath>
+  </taskdef>
+  <target name="deployCodeCheckOnly" description="Does not actually save changes to server">
+    <sf:deploy username="${DEVP.username}" password="${DEVP.password}" serverurl="${DEVP.serverurl}"
+      deployRoot="force-app" checkOnly="true" runAllTests="false" />
+  </target>
+
+  <target name="deployCode" description="Deploy the changes">
+    <sf:deploy username="${DEVP.username}" password="${DEVP.password}" serverurl="${DEVP.serverurl}"
+      deployRoot="force-app" checkOnly="false" runAllTests="false" />
+  </target>
+
+  <target name="deleteCode" description="Delete the changes">
+    <sf:deploy username="${DEVP.username}" password="${DEVP.password}" serverurl="${DEVP.serverurl}"
+      deployRoot="force-app" checkOnly="false" runAllTests="false" />
+  </target>
+
+  <target name="deleteCodeCheckOnly" description="Validate Deletion of the components">
+    <sf:deploy username="${DEVP.username}" password="${DEVP.password}" serverurl="${DEVP.serverurl}"
+      deployRoot="force-app" checkOnly="true" runAllTests="false">
+    </sf:deploy>
+  </target>
+
+  <!--For
+  VVAL -->
+  <target name="retrieveCodeVval">
+    <sf:retrieve username="${VVAL.username}" password="${VVAL.password}"
+      serverurl="${VVAL.serverurl}" retrieveTarget="force-app" unpackaged="force-app/package.xml" />
+  </target>
+
+  <target name="deployCodeCheckOnlyVval" description="Does not actually save changes to server">
+    <sf:deploy username="${VVAL.username}" password="${VVAL.password}" serverurl="${VVAL.serverurl}"
+      deployRoot="force-app" checkOnly="true" runAllTests="false" />
+  </target>
+
+  <target name="deployCodeVval" description="Deploy the changes">
+    <sf:deploy username="${VVAL.username}" password="${VVAL.password}" serverurl="${VVAL.serverurl}"
+      deployRoot="force-app" checkOnly="false" runAllTests="false" />
+  </target>
+
+  <target name="deleteCodeVval" description="Delete the changes">
+    <sf:deploy username="${VVAL.username}" password="${VVAL.password}" serverurl="${VVAL.serverurl}"
+      deployRoot="force-app" checkOnly="true" runAllTests="false" />
+  </target>
+
+  <!--For
+  Production -->
+
+  <target name="deployCodeCheckOnlyProd" description="Does not actually save changes to server">
+    <sf:deploy username="${PROD.username}" password="${PROD.password}" serverurl="${PROD.serverurl}"
+      deployRoot="force-app" checkOnly="true" runAllTests="false" />
+  </target>
+
+  <target name="deployCodeProd" description="Deploy the changes">
+    <sf:deploy username="${PROD.username}" password="${PROD.password}" serverurl="${PROD.serverurl}"
+      deployRoot="force-app" checkOnly="false" runAllTests="false" />
+  </target>
+
+  <target name="deleteCodeCheckOnlyProd" description=" Validate of Delete the changes">
+    <sf:deploy username="${PROD.username}" password="${PROD.password}" serverurl="${PROD.serverurl}"
+      deployRoot="force-app" checkOnly="true" runAllTests="false" />
+  </target>
+
+  <target name="deleteCodeProd" description="Delete the changes">
+    <sf:deploy username="${PROD.username}" password="${PROD.password}" serverurl="${PROD.serverurl}"
+      deployRoot="force-app" checkOnly="false" runAllTests="false" />
   </target>
 
 </project>
