--- a/.github/workflows/pr-staging.yml
+++ b/.github/workflows/pr-staging.yml
@@ -29,8 +29,6 @@ jobs:
     - name: 'Decrypt file'
       run: openssl enc -nosalt -aes-256-cbc -d -in assets/server.key.enc -out server.key -base64 -K ${{secrets.DECRYPTION_KEY}} -iv ${{secrets.DECRYPTION_IV}}
     - name: 'Authorize'
-      run: sfdx force:auth:jwt:grant --clientid=${{ secrets.COSUMER_KEY }} --username=${{ secrets.USERNAME }} --jwtkeyfile server.key
-    - name: 'Convert Metadata'
-      run: sfdx force:source:convert --rootdir=force-app --outputdir=convert
+      run: sfdx force:auth:jwt:grant --clientid=${{ secrets.COSUMER_KEY }} --username=${{ secrets.USERNAME }} --jwtkeyfile server.key --setdefaultdevhubusername --setalias=hub-org
     - name: 'Run Test on Metadata'
-      run: sfdx force:mdapi:deploy --deploydir=convert --testlevel=RunLocalTests --checkonly -u hub-org   
+      run: sfdx force:mdapi:deploy --deploydir=force-app --testlevel=RunLocalTests --checkonly -u hub-org   
