--- a/.github/workflows/pr-staging.yml
+++ b/.github/workflows/pr-staging.yml
@@ -33,4 +33,4 @@ jobs:
     - name: 'Convert Metadata'
       run: sfdx force:source:convert --rootdir=force-app --outputdir=convert
     - name: 'Run Test on Metadata'
-      run: sfdx force:mdapi:deploy --deploydir=force-app --testlevel=RunLocalTests --checkonly -u hub-org   
+      run: sfdx force:mdapi:deploy --deploydir=convert --checkonly -u hub-org   
