--- a/convert/package.xml
+++ b/convert/package.xml
@@ -46,7 +46,6 @@
         <members>VerifyDate</members>
         <members>calculatorServices</members>
         <members>dad</members>
-        <members>ocupeclass</members>
         <name>ApexClass</name>
     </types>
     <types>
@@ -85,6 +84,173 @@
         <name>AuraDefinitionBundle</name>
     </types>
     <types>
+        <members>Account.AccountNumber</members>
+        <members>Account.AccountSource</members>
+        <members>Account.Accumulated_Interest__c</members>
+        <members>Account.Active__c</members>
+        <members>Account.AnnualRevenue</members>
+        <members>Account.BillingAddress</members>
+        <members>Account.CleanStatus</members>
+        <members>Account.CustomerPriority__c</members>
+        <members>Account.DandbCompanyId</members>
+        <members>Account.Description</members>
+        <members>Account.DunsNumber</members>
+        <members>Account.Fax</members>
+        <members>Account.Industry</members>
+        <members>Account.Interest_Rate__c</members>
+        <members>Account.Jigsaw</members>
+        <members>Account.Match_Billing_Address__c</members>
+        <members>Account.NaicsCode</members>
+        <members>Account.NaicsDesc</members>
+        <members>Account.Name</members>
+        <members>Account.NumberOfEmployees</members>
+        <members>Account.Number_Of_Contacts__c</members>
+        <members>Account.NumberofLocations__c</members>
+        <members>Account.OwnerId</members>
+        <members>Account.Ownership</members>
+        <members>Account.ParentId</members>
+        <members>Account.Phone</members>
+        <members>Account.Principal__c</members>
+        <members>Account.Rating</members>
+        <members>Account.SLAExpirationDate__c</members>
+        <members>Account.SLASerialNumber__c</members>
+        <members>Account.SLA__c</members>
+        <members>Account.ShippingAddress</members>
+        <members>Account.Sic</members>
+        <members>Account.SicDesc</members>
+        <members>Account.Site</members>
+        <members>Account.TickerSymbol</members>
+        <members>Account.Tier</members>
+        <members>Account.Tradestyle</members>
+        <members>Account.Type</members>
+        <members>Account.UpsellOpportunity__c</members>
+        <members>Account.Website</members>
+        <members>Account.YearStarted</members>
+        <members>Case.AccountId</members>
+        <members>Case.AssetId</members>
+        <members>Case.BusinessHoursId</members>
+        <members>Case.ClosedDate</members>
+        <members>Case.Comments</members>
+        <members>Case.ContactEmail</members>
+        <members>Case.ContactFax</members>
+        <members>Case.ContactId</members>
+        <members>Case.ContactMobile</members>
+        <members>Case.ContactPhone</members>
+        <members>Case.Date_Due__c</members>
+        <members>Case.Date_Reported__c</members>
+        <members>Case.Description</members>
+        <members>Case.EngineeringReqNumber__c</members>
+        <members>Case.EntitlementId</members>
+        <members>Case.IsClosedOnCreate</members>
+        <members>Case.IsEscalated</members>
+        <members>Case.IsStopped</members>
+        <members>Case.Last_Day_of_Month__c</members>
+        <members>Case.MilestoneStatus</members>
+        <members>Case.MilestoneStatusIcon</members>
+        <members>Case.Origin</members>
+        <members>Case.OwnerId</members>
+        <members>Case.ParentId</members>
+        <members>Case.PotentialLiability__c</members>
+        <members>Case.Priority</members>
+        <members>Case.ProductId</members>
+        <members>Case.Product__c</members>
+        <members>Case.Reason</members>
+        <members>Case.SLAViolation__c</members>
+        <members>Case.ServiceContractId</members>
+        <members>Case.SlaExitDate</members>
+        <members>Case.SlaStartDate</members>
+        <members>Case.Status</members>
+        <members>Case.StopStartDate</members>
+        <members>Case.Subject</members>
+        <members>Case.SuppliedCompany</members>
+        <members>Case.SuppliedEmail</members>
+        <members>Case.SuppliedName</members>
+        <members>Case.SuppliedPhone</members>
+        <members>Case.Type</members>
+        <members>Case.Vehicle__c</members>
+        <members>Contact.AccountId</members>
+        <members>Contact.AssistantName</members>
+        <members>Contact.AssistantPhone</members>
+        <members>Contact.Birthdate</members>
+        <members>Contact.CleanStatus</members>
+        <members>Contact.Department</members>
+        <members>Contact.Description</members>
+        <members>Contact.DoNotCall</members>
+        <members>Contact.Do_Not_Contact__c</members>
+        <members>Contact.Email</members>
+        <members>Contact.Fax</members>
+        <members>Contact.GenderIdentity</members>
+        <members>Contact.HasOptedOutOfEmail</members>
+        <members>Contact.HasOptedOutOfFax</members>
+        <members>Contact.HomePhone</members>
+        <members>Contact.IndividualId</members>
+        <members>Contact.Jigsaw</members>
+        <members>Contact.Languages__c</members>
+        <members>Contact.LastCURequestDate</members>
+        <members>Contact.LastCUUpdateDate</members>
+        <members>Contact.LeadSource</members>
+        <members>Contact.Level__c</members>
+        <members>Contact.MailingAddress</members>
+        <members>Contact.MobilePhone</members>
+        <members>Contact.Name</members>
+        <members>Contact.OtherAddress</members>
+        <members>Contact.OtherPhone</members>
+        <members>Contact.OwnerId</members>
+        <members>Contact.Phone</members>
+        <members>Contact.Pronouns</members>
+        <members>Contact.ReportsToId</members>
+        <members>Contact.Title</members>
+        <members>Product2.Cost__c</members>
+        <members>Product2.Current_Inventory__c</members>
+        <members>Product2.Description</members>
+        <members>Product2.DisplayUrl</members>
+        <members>Product2.ExternalDataSourceId</members>
+        <members>Product2.ExternalId</members>
+        <members>Product2.Family</members>
+        <members>Product2.IsActive</members>
+        <members>Product2.Lifespan_Months__c</members>
+        <members>Product2.Maintenance_Cycle__c</members>
+        <members>Product2.Name</members>
+        <members>Product2.ProductCode</members>
+        <members>Product2.QuantityUnitOfMeasure</members>
+        <members>Product2.Replacement_Part__c</members>
+        <members>Product2.SellerId</members>
+        <members>Product2.SourceProductId</members>
+        <members>Product2.StockKeepingUnit</members>
+        <members>Product2.Warehouse_SKU__c</members>
+        <members>User.ManagerId</members>
+        <members>Vehicle__c.Air_Conditioner__c</members>
+        <members>Vehicle__c.Awning__c</members>
+        <members>Vehicle__c.Backup_Camera_Monitor__c</members>
+        <members>Vehicle__c.Bathroom_Hookup__c</members>
+        <members>Vehicle__c.Bathrooms__c</members>
+        <members>Vehicle__c.Bedrooms__c</members>
+        <members>Vehicle__c.Fancy_Sound_System__c</members>
+        <members>Vehicle__c.Generator__c</members>
+        <members>Vehicle__c.Levelers__c</members>
+        <members>Vehicle__c.License_Plate__c</members>
+        <members>Vehicle__c.Make__c</members>
+        <members>Vehicle__c.Model__c</members>
+        <members>Vehicle__c.Power__c</members>
+        <members>Vehicle__c.Propane_Tank__c</members>
+        <members>Vehicle__c.Recommended_Passengers__c</members>
+        <members>Vehicle__c.Roof_Mounted_Antenna__c</members>
+        <members>Vehicle__c.Shower__c</members>
+        <members>Vehicle__c.Tub__c</members>
+        <members>Vehicle__c.Type__c</members>
+        <members>Vehicle__c.VIN_Number__c</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>Account</members>
+        <members>Case</members>
+        <members>Contact</members>
+        <members>Product2</members>
+        <members>User</members>
+        <members>Vehicle__c</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
         <members>bikeCard</members>
         <members>data</members>
         <members>detail</members>
@@ -95,10 +261,42 @@
         <name>LightningComponentBundle</name>
     </types>
     <types>
+        <members>Account.AllAccounts</members>
+        <members>Account.MyAccounts</members>
+        <members>Account.NewLastWeek</members>
+        <members>Account.NewThisWeek</members>
+        <members>Account.PlatinumandGoldSLACustomers</members>
+        <members>Case.AllClosedCases</members>
+        <members>Case.AllOpenCases</members>
+        <members>Case.MyCases</members>
+        <members>Case.MyOpenCases</members>
+        <members>Contact.AllContacts</members>
+        <members>Contact.BirthdaysThisMonth</members>
+        <members>Contact.MyContacts</members>
+        <members>Contact.NewLastWeek</members>
+        <members>Contact.NewThisWeek</members>
+        <members>Product2.AllProducts</members>
+        <members>User.ActiveUsers</members>
+        <members>User.AdminUsers</members>
+        <members>User.AllUsers</members>
+        <members>Vehicle__c.All</members>
+        <name>ListView</name>
+    </types>
+    <types>
         <members>GetAnimalResource</members>
         <members>jQueryMobile</members>
         <members>vfimagetest</members>
         <name>StaticResource</name>
+    </types>
+    <types>
+        <members>Case.Mark_as_Escalated</members>
+        <members>User.NoUsernameChangesAllowed</members>
+        <name>ValidationRule</name>
+    </types>
+    <types>
+        <members>Account.Billing</members>
+        <members>Case.UpsellCrosssellOpportunity</members>
+        <name>WebLink</name>
     </types>
     <version>56.0</version>
 </Package>
