--- a/.github/workflows/pr-staging.yml
+++ b/.github/workflows/pr-staging.yml
@@ -14,10 +14,14 @@ jobs:
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
+    steps:   
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '14'
+    
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-
+    
     # Runs a single command using the runners shell
     - name: 'Build and Deploy'
       run: |
@@ -25,12 +29,48 @@ jobs:
         mkdir sfdx-cli
         tar xJf sfdx-linux-amd64.tar.xz -C sfdx-cli --strip-components 1
         ./sfdx-cli/install
+    # Install java as it is required for the next step
+    
+    - name: 'Installing java'
+      run: |
+        sudo apt-get update
+        sudo apt install default-jdk
+    # Install SFDX scanner
+    
+    - name: 'Installing SFDX scanner'
+      run: 
+        sfdx plugins:install @salesforce/sfdx-scanner
+      
    # Runs a set of commands using the runners shell
     - name: 'Decrypt file'
       run: openssl enc -nosalt -aes-256-cbc -d -in assets/server.key.enc -out server.key -base64 -K ${{secrets.DECRYPTION_KEY}} -iv ${{secrets.DECRYPTION_IV}}
+    
     - name: 'Authorize'
       run: sfdx force:auth:jwt:grant --clientid=${{ secrets.COSUMER_KEY }} --username=${{ secrets.USERNAME }} --jwtkeyfile server.key --setdefaultdevhubusername --setalias=hub-org
+    
+    - name: "Install App and Create Delta"   
+      run: |
+        sudo npm install sfdx-git-delta@latest -g
+        git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'
+        git fetch --all
+        git checkout -b pr
+        git --no-pager diff --name-status pr origin/staging
+        sgd --to pr --from origin/staging --repo . --output .
+        cat package/package.xml
     - name: 'Convert Metadata'
-      run: sfdx force:source:convert --rootdir=force-app --outputdir=convert
+      run: sfdx force:source:convert --manifest=package/package.xml  --outputdir=convert
+    
+    - name: 'Scan code'
+      run: |
+        cd convert
+        sfdx scanner:run --format sarif --target './**/*.cls' --category "Design,Best Practices,Performance" --outfile 'apexScanResults.sarif'  
+        cd ..
+    
+    # Now we upload the .sarif file as explained in the previous step
+    - name: Upload SARIF file
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: changed-sources/apexScanResults.sarif
+    
     - name: 'Run Test on Metadata'
       run: sfdx force:mdapi:deploy --deploydir=convert --testlevel=RunLocalTests --checkonly -u hub-org  
