--- a/.github/workflows/pr-staging.yml
+++ b/.github/workflows/pr-staging.yml
@@ -48,14 +48,17 @@ jobs:
     - name: 'Authorize'
       run: sfdx force:auth:jwt:grant --clientid=${{ secrets.COSUMER_KEY }} --username=${{ secrets.USERNAME }} --jwtkeyfile server.key --setdefaultdevhubusername --setalias=hub-org
     
+    - name: 'install delta'
+      run: |
+          sfdx plugins:install sfdx-git-delta
+          
     - name: "Install App and Create Delta"   
       run: |
-        sudo npm install sfdx-git-delta@latest -g
         git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'
         git fetch --all
         git checkout -b pr
         git --no-pager diff --name-status pr origin/staging
-        sgd --to pr --from origin/staging --repo . --output .
+        sfdx sgd:source:delta --to pr --from origin/staging --repo . --output .
         cat package/package.xml
     - name: 'Convert Metadata'
       run: sfdx force:source:convert --manifest=package/package.xml  --outputdir=convert
