--- a/.github/workflows/pr-staging.yml
+++ b/.github/workflows/pr-staging.yml
@@ -50,6 +50,7 @@ jobs:
     
     - name: 'install delta'
       run: |
+          echo y
           sfdx plugins:install sfdx-git-delta
           sfdx plugins
           
