--- a/.github/workflows/pr-staging.yml
+++ b/.github/workflows/pr-staging.yml
@@ -25,22 +25,29 @@ jobs:
    
     # Install java as it is required for the next step
     
+    - name: 'Installing java'
+      run: |
+        sudo apt-get update
+        sudo apt install default-jdk
+    
   
     - name : "install node js"
       run: |
         sudo curl -s https://deb.nodesource.com/setup_16.x | sudo bash
         sudo apt install nodejs -y
         node -v
-     # Runs a single command using the runners shell
+    
+    # Runs a single command using the runners shell
     - name: 'Build and Deploy'
       run: |
         npm install sfdx-cli --global
         sfdx --version
+    
     # Install SFDX scanner
     - name: 'Installing SFDX scanner'
-      run: 
+      run: |
         npm i @salesforce/sfdx-scanner
-      
+        sfdx plugins
    # Runs a set of commands using the runners shell
     - name: 'Decrypt file'
       run: openssl enc -nosalt -aes-256-cbc -d -in assets/server.key.enc -out server.key -base64 -K ${{secrets.DECRYPTION_KEY}} -iv ${{secrets.DECRYPTION_IV}}
@@ -61,6 +68,7 @@ jobs:
         git --no-pager diff --name-status pr origin/staging
         sfdx sgd:source:delta --to pr --from origin/staging --repo . --output .
         cat package/package.xml
+    
     - name: 'Convert Metadata'
       run: sfdx force:source:convert --manifest=package/package.xml  --outputdir=convert
     
@@ -74,7 +82,7 @@ jobs:
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v1
       with:
-        sarif_file: changed-sources/apexScanResults.sarif
+        sarif_file: convert/apexScanResults.sarif
     
     - name: 'Run Test on Metadata'
       run: sfdx force:mdapi:deploy --deploydir=convert --testlevel=RunLocalTests --checkonly -u hub-org  
