--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -21,18 +21,35 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
+    - name : "install node js"
+      run: |
+        sudo curl -s https://deb.nodesource.com/setup_16.x | sudo bash
+        sudo apt install nodejs -y
+        node -v
+    
+    # Runs a single command using the runners shell
     - name: 'Build and Deploy'
       run: |
-        wget https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
-        mkdir sfdx-cli
-        tar xJf sfdx-linux-amd64.tar.xz -C sfdx-cli --strip-components 1
-        ./sfdx-cli/install
+        npm install sfdx-cli --global
+        sfdx --version
    # Runs a set of commands using the runners shell
     - name: 'Decrypt file'
       run: openssl enc -nosalt -aes-256-cbc -d -in assets/server.key.enc -out server.key -base64 -K ${{secrets.DECRYPTION_KEY}} -iv ${{secrets.DECRYPTION_IV}}
     - name: 'Authorize'
       run: sfdx force:auth:jwt:grant --clientid=${{ secrets.COSUMER_KEY }} --username=${{ secrets.USERNAME }} --jwtkeyfile server.key --setdefaultdevhubusername --setalias=hub-org
-    - name: 'Convert Metadata'
-      run: sfdx force:source:convert --rootdir=force-app --outputdir=convert
+    - name: 'install delta'
+      run: |
+          echo y | sfdx plugins:install sfdx-git-delta
+          sfdx plugins
+    
+    - name: 'Create delta packages for new, modified or deleted metadata'
+      run: | 
+        mkdir changed-sources
+        git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'
+        git fetch --all
+        git checkout -b pr
+        git --no-pager diff --name-status pr origin/staging
+        sfdx sgd:source:delta --to pr --from origin/staging --output changed-sources/ --generate-delta --source force-app/ 
+    
     - name: 'Run Test on Metadata'
-      run: sfdx force:mdapi:deploy --deploydir=convert -u hub-org
+      run: sfdx force:mdapi:deploy --deploydir=changed-sources -u hub-org
