--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -47,9 +47,9 @@ jobs:
         mkdir changed-sources
         git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'
         git fetch --all
-        git checkout -b pr
-        git --no-pager diff --name-status pr origin/main
-        sfdx sgd:source:delta --to pr --from origin/main --output changed-sources/ --generate-delta --source force-app/ 
-    
+        git --no-pager diff --name-status staging origin/main
+        sfdx sgd:source:delta --to staging --from origin/master --repo . --output .
+    - name: 'Convert Metadata'
+      run: sfdx force:source:convert --manifest=package/package.xml --outputdir=convert
     - name: 'Run Test on Metadata'
-      run: sfdx force:mdapi:deploy --deploydir=changed-sources/destructiveChanges --checkonly --ignorewarnings -u hub-org
+      run: sfdx force:mdapi:deploy --deploydir=convert --checkonly --ignorewarnings -u hub-org
