--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -49,6 +49,8 @@ jobs:
         git --no-pager diff --name-status staging origin/main
         sfdx sgd:source:delta --to staging --from origin/main --repo . --output .
         cat package/package.xml
+    - name : "delete convert dir"
+      run : sudo rm -r convert
     - name: 'Convert Metadata'
       run: sfdx force:source:convert --manifest=package/package.xml --outputdir=convert
     - name: 'Run Test on Metadata'
