--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -55,4 +55,4 @@ jobs:
     - name: 'Convert Metadata'
       run: sfdx force:source:convert --manifest=package/package.xml --outputdir=convert
     - name: 'Run Test on Metadata'
-      run: sfdx force:mdapi:deploy --deploydir=convert
+      run: sfdx force:mdapi:deploy --deploydir=convert -u hub-org
